--- a/css/academic.css
+++ b/css/academic.css
@@ -10,22 +10,20 @@
 }
 
 .academic__title {
-   
-    font-family: 'Raleway';
     font-style: normal;
     font-weight: 700;
     font-size: 32px;
     line-height: 38px;
     text-align: center;
-    color: #464646;
+
 }
 
 .academic__courses {
     display: flex;
     flex-direction: row;
     align-items: flex-start;
-    padding: 0px;
-    gap:16px;
+    justify-content: space-between;
+    width: 1440px;
 
 }
 
@@ -35,7 +33,9 @@
     align-items: flex-start;
     padding: 0px;
     gap: 8px;
- 
+    width: 368px;
+
+
 }
 
 .academic__courses__list {
@@ -44,8 +44,8 @@
     align-items: flex-start;
     padding: 0px;
     gap: 8px;
-
 }
+
 
 .academic__courses__item__img {
     display: flex;
@@ -69,7 +69,6 @@
     font-weight: 700;
     font-size: 22px;
     line-height: 26px;
-    color: #464646;
 }
 
 .academic__courses__item__subtitle {
@@ -77,22 +76,55 @@
     font-style: normal;
     font-weight: 500;
     font-size: 16px;
-    line-height: 19px;
-    color: #464646;
+    line-height: 19px
 }
-@media screen and (max-width: 480px) {
-    .academic{
-        width: 480px;
-    
-    }
-    .academic__courses{
-       width: auto;
-       flex-wrap: wrap;
-    }
-    .academic__courses__box{
+
+@media(max-width:375px) {
+    .academic {
+        justify-content: center;
+        flex-direction: column;
+        box-sizing: border-box;
         width: 100%;
     }
-    .menu__list__item__contacto{
+
+    .academic__title {
+        font-size: 22px;
+        line-height: 26px;
+
+    }
+
+    .academic__courses {
         display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        box-sizing: border-box;
+        padding: 0px;
+        gap: 16px;
+        width: 296px;
+       
+    }
+
+    .academic__courses__box {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        box-sizing: border-box;
+        padding: 16px;
+        gap: 10px;
+        width: 296px;
+   
+    }
+
+    .academic__courses__item__title {
+        font-weight: 700;
+        font-size: 16px;
+        line-height: 19px;
+    }
+
+    .academic__courses__item__subtitle {
+        font-weight: 500;
+        font-size: 14px;
+        line-height: 16px;
     }
 }
