--- a/css/experiencia.css
+++ b/css/experiencia.css
@@ -1,9 +1,11 @@
 .experience {
-    font-family: 'Raleway';
     font-style: normal;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    color: #464646;
+    gap: 64px;
+    width: 1440px;
 
 }
 
@@ -12,46 +14,51 @@
     font-size: 32px;
     line-height: 38px;
     text-align: center;
-    color: #464646;
     margin-bottom: 20px;
 }
 
-.experiencie__box{
+.experiencie__box {
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
     align-items: center;
     padding-bottom: 16px;
     gap: 16px;
-    width: 1136px;
+
 }
-.experiencie__box:nth-child(2n){
+
+.experiencie__box:nth-child(2n +1) {
     flex-direction: row-reverse;
 }
+
 .experience__img {
-   height: 400px;
-    width: 752px;
+    box-sizing: border-box;
+    width: 70%;
+
 }
 
 .experience__info {
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    gap: 16px;
+    align-items: flex-start;
+    padding: 0px;
+    gap: 8px;
+    box-sizing: border-box;
+    width: 30%;
 }
 
 .experience__title {
     font-weight: 700;
     font-size: 22px;
     line-height: 26px;
-    color: #464646;
+
 }
 
 .experience__text {
     font-weight: 500;
     font-size: 16px;
     line-height: 19px;
-    color: #464646;
+
 }
 
 .experience__description {
@@ -86,22 +93,30 @@
     border: 1px solid #2A7AE4;
 
 }
-@media screen and (max-width: 480px) {
+@media(max-width:375px){
     .experience{
-        width: auto;
+        display: flex;
+        box-sizing: border-box;
+        width: 360px;
+    }
+    .experience__section__title{
+        font-weight: 700;
+font-size: 22px;
+line-height: 26px
     }
     .experiencie__box{
-        display: flex;
         flex-direction: column;
-        width: 480px;
+        align-items: flex-start;
+        flex-wrap: wrap;
     }
-   .experience__img{
-    display: inline;
-    width: 480px;
-   }
-   .experience__description{
-   justify-items: flex-start;
-   
-   }
-   
+    .experiencie__box:nth-child(2n +1){
+        flex-direction: column;
+        align-items: flex-start;
+    }
+    .experience__img{
+        width: 100%;
+    }
+    .experience__info{
+        width: 100%;
+    }
 }
