--- a/css/menu.css
+++ b/css/menu.css
@@ -4,9 +4,15 @@
     justify-content: space-between;
     align-items: center;
     padding: 32px 0px;
-    width: 1136px;
-   
+    width: 1440px;
+}
 
+.menu__list__item:last-child {
+    font-style: normal;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 19px;
+    color: #464646;
 }
 
 .menu__header {
@@ -15,17 +21,16 @@
     align-items: center;
     padding: 0px;
     gap: 8px;
-   
 }
 
 .menu__title {
-    font-family: var(--raleway);
+    font-family: 'Raleway';
     font-style: normal;
     font-weight: 700;
     font-size: 16px;
     line-height: 19px;
     color: #464646;
-   
+
 }
 
 .menu__list {
@@ -45,20 +50,44 @@
     color: #464646;
 }
 
-.menu__list__item__contacto {
+.menu__list__item__contato {
     display: none;
+
 }
-@media screen and (max-width: 480px) {
-    .menu{
-        width: auto;
-        gap: 15px;
-        padding: 10px;
-    
+
+@media(max-width:375px) {
+    .menu {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+        width: 360px;
+        padding: 16px;
+        gap: 10px;
     }
-    .menu__list{
+
+    .menu__header {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        padding: 0px;
+        gap: 8px;
+    }
+
+    .menu__title {
+        font-weight: 700;
+        font-size: 16px;
+        line-height: 19px;
+    }
+
+    .menu__list {
         display: none;
     }
-    .menu__list__item__contacto{
-        display: show;
+
+    .menu__list__item__contato {
+        display: block;
+        font-weight: 400;
+        font-size: 14px;
+        line-height: 16px;
     }
 }
