--- a/css/sobre-mi.css
+++ b/css/sobre-mi.css
@@ -1,27 +1,21 @@
 .about {
+    font-family: 'Raleway';
+    font-style: normal;
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 64px;
-    gap: 10px;
-    background-color: #EAF2FD;
     box-sizing: border-box;
     width: 100%;
-
-
+    background: #EAF2FD;
 }
 
 .about__container {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    padding: 0px;
-    gap: 16px;
-    width: 1136px;
+    width: 1440px;
+    margin-top: 3rem;
+    margin-bottom: 3rem;
 }
 
 .about__title {
-    font-family: 'Raleway';
     font-style: normal;
     font-weight: 700;
     font-size: 32px;
@@ -30,25 +24,40 @@
 }
 
 .about__paragraph {
-    width: 751px;
-    font-family: 'Raleway';
-    font-style: normal;
-    font-weight: 400;
     font-size: 16px;
+    font-weight: 400;
     line-height: 19px;
-    color: #464646;
+    width: 750px;
+
 }
-@media screen and (max-width: 480px) {
+
+@media (max-width:375px) {
     .about {
-        width: 480;
-    }
-    .title__bio {
-        font-size: 40px;
-        line-height: 50px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;    
     }
 
-    .title__div{
-        flex-direction: column-reverse;
-        width: auto;
+    .about__container {
+        width: 360px;
+       
+    
     }
+
+    .about__title {
+        font-weight: 700;
+        font-size: 22px;
+        line-height: 26px;
+        margin-bottom: 2rem;
+    }
+
+    .about__paragraph {
+        flex-wrap: wrap;
+        width: 328px;
+        font-weight: 400;
+        font-size: 14px;
+        line-height: 16px;
+        margin-bottom: 2rem;
+    }
+
 }
